[project]
name = "future-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach==6.3.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "idna==3.11",
    "kaggle==1.7.4.5",
    "protobuf==6.33.1",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "six==1.17.0",
    "text-unidecode==1.3",
    "tqdm==4.67.1",
    "urllib3==2.5.0",
    "uv==0.8.14",
    "webencodings==0.5.1",
]
